--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,30 @@
-#map {
+.fullView {
     height: 100% !important;
+}
+.halfView {
+    height: 50% !important;
+}
+
+.temp-wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 10px;
+    border: 1px solid;
+    padding: 5px;
+    align-items: center;
+}
+
+.data{
+	width: 50px;
+	align-items: center;
+	justify-content: center;
+	display: flex;
+	height: 28px;
+	border: 2px solid black;
+	border-radius: 5px;
+}
+.cancelIcon {
+	width: 25px;
+	height: 20px;
 }
