Added social login.

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,7 +5,5 @@
 </ion-header>
 
 <ion-content padding>
-  <h1>
-    login
-  </h1>
+    <div class="fb-login-button" data-size="large" data-button-type="continue_with" data-auto-logout-link="false" data-use-continue-as="false" onlogin="window.checkLoginState()"></div>
 </ion-content>
