--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,7 +18,7 @@
               <ion-button fill="outline" slot="end" (click)="changeFilter('F')" [ngClass]="{'active': activeFilter == 'F'}">F</ion-button>
       </div>
       <div class="cancelIcon" (click)="resizeMap(100)">
-        X
+          <ion-icon name="close"></ion-icon>
       </div>
     </div>
     <div>
